--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,12 +1,23 @@
-label {
-    color: red;
+main {
+    background-color: #1E1F29;
 }
 
 h1 {
-    color: green
+    color: #FAFAFA;
 }
 
-div {
-    background-color: bisque;
-    /* background: bisque; */
+input,
+textarea,
+select {
+    background-color: #2E2D3D;
+    color: #FAFAFA;
+}
+
+label {
+    color: #AFB2BF;
+}
+
+button {
+    background-color: #6C38CC;
+    color: #FAFAFA;
 }
