--- a/PurpleForm/Styles/style.css
+++ b/PurpleForm/Styles/style.css
@@ -16,6 +16,14 @@ select {
     color: #FAFAFA;
 }
 
+input:invalid {
+    background-color: red;
+}
+
+input:valid {
+    background-color: green;
+}
+
 label {
     color: #AFB2BF;
 }
@@ -23,8 +31,4 @@ label {
 button {
     background-color: #6C38CC;
     color: #FAFAFA;
-}
-
-input[type="email"] {
-    background-color: #FFF;
 }
