--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -19,7 +19,7 @@
     background-color: aliceblue;
 }
 
-a::after {
+/* a::after {
     color: red;
     content: " ! ";
 }
@@ -31,7 +31,7 @@ a::before {
 
 ul li:nth-child(2n-1) {
     color: red;
-}
+} */
 
 /* p:not(.sectionText) {
     color: red;
@@ -81,4 +81,13 @@ header a {
     font-size: 14px;
     line-height: 20px;
     color: #050038;
+}
+
+nav ul {
+    list-style: none;
+}
+
+.sectionList {
+    list-style-type: none;
+    list-style-image: url('../images/check.svg');
 }
