--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -76,3 +76,11 @@ nav ul {
 .sectionList li::marker {
     content: url('../images/check.svg');
 }
+
+.experimentRed {
+    background: red;
+}
+
+.experimentBlue {
+    background: blue;
+}
