--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -79,7 +79,17 @@ nav ul {
 
 .experimentBlue {
     background: blue;
-    width: 200px;
+    width: 400px;
     height: 400px;
     color: #FFFFFF;
+}
+
+.border1 {
+    /* border-width: 5px;
+    border-style: solid;
+    border-color: #050038; */
+    box-sizing: border-box;
+    border: 5px dashed #050038;
+    border-left: 10px solid #071766;
+    border-radius: 50%;
 }
