--- a/PurpleForm/Styles/style.css
+++ b/PurpleForm/Styles/style.css
@@ -1,12 +1,25 @@
+body {
+    background-color: #0d0e11;
+}
+
 main {
-    background-color: #1E1F29;
+    background: #1E1F29;
+    border-radius: 10px;
+    padding: 48px;
 }
 
 h1 {
     color: #FAFAFA;
     font-size: 36px;
     font-weight: 700;
-    font-family: 'Andale Mono', monospace;
+    font-family: sans-serif;
+    text-align: center;
+    margin: 0 0 32px;
+}
+
+.field {
+    margin: 16px;
+    position: relative;
 }
 
 input,
@@ -14,21 +27,45 @@ textarea,
 select {
     background-color: #2E2D3D;
     color: #FAFAFA;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    font-family: sans-serif;
+    padding: 27px 48px 12px;
+    border-radius: 10px;
+    border: none;
 }
 
-input:invalid {
-    background-color: red;
-}
-
-input:valid {
-    background-color: green;
+input::placeholder {
+    color: #4a4863;
+    font-size: 16px;
 }
 
 label {
     color: #AFB2BF;
+    position: absolute;
+    top: 12px;
+    left: 48px;
+    font-family: fira sans;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 120%;
 }
 
 button {
     background-color: #6C38CC;
     color: #FAFAFA;
+    border: none;
+    border-radius: 10px;
+    padding: 12px 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 120%;
+    text-align: center;
+}
+
+.field img {
+    position: absolute;
+    top: 17px;
+    left: 16px;
 }
