--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -142,22 +142,34 @@ footer div:first-child {
     margin: 10px;
     color: #FFFFFF;
     font-size: 24px;
+    animation: my-move 2s ease forwards;
+    animation-name: my-move;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    animation-fill-mode: forwards;
+    animation-delay: 1s;
+    animation-iteration-count: 3;
+    animation-direction: alternate;
 }
 
-.exp div:nth-child(1) {
-    transform: rotate(45deg);
+.exp:hover div {
+    animation-play-state: paused;
 }
 
-.exp div:nth-child(2) {
-    transform: scale(2, 1);
-}
+@keyframes my-move {
+    25% {
+        transform: translateX(100%);
+    }
 
-.exp div:nth-child(3) {
-    transform: translateX(300px);
-}
+    50% {
+        transform: translateX(100%) translateY(-100%);
+    }
 
-.exp div:nth-child(4) {
-    transform: skew(-5deg);
-}
+    75% {
+        transform: translateX(0%) translateY(-100%);
+    }
 
-.exp div:nth-child(5) {}
+    100% {
+        transform: translateX(0%) translateY(0%);
+    }
+}
