--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -173,3 +173,15 @@ footer div:first-child {
         transform: translateX(0%) translateY(0%);
     }
 }
+
+@media (min-width: 500px) {
+    h1 {
+        color: red;
+    }
+}
+
+@media (max-width: 500px) {
+    h2 {
+        color: green;
+    }
+}
