--- a/PurpleForm/Styles/style.css
+++ b/PurpleForm/Styles/style.css
@@ -10,6 +10,9 @@ main {
     background: #1E1F29;
     border-radius: 10px;
     padding: 48px;
+    max-width: 600px;
+    min-width: 375px;
+    margin: 0 auto;
 }
 
 h1 {
