--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -18,8 +18,7 @@ h2 {
 h1,
 h2 {
     font-weight: 400;
-    /* font-size: 48px; */
-    font-size: 4vw;
+    font-size: 48px;
     line-height: 56px;
     color: #050038;
 }
@@ -137,40 +136,10 @@ footer div:first-child {
 }
 
 .exp div {
-    width: 200px;
+    width: calc(100% - 20px);
     height: 200px;
     background-color: #050038;
     margin: 10px;
     color: #FFFFFF;
     font-size: 24px;
-    animation: my-move 2s ease forwards;
-    animation-name: my-move;
-    animation-duration: 2s;
-    animation-timing-function: ease;
-    animation-fill-mode: forwards;
-    animation-delay: 1s;
-    animation-iteration-count: 3;
-    animation-direction: alternate;
-}
-
-.exp:hover div {
-    animation-play-state: paused;
-}
-
-@keyframes my-move {
-    25% {
-        transform: translateX(100%);
-    }
-
-    50% {
-        transform: translateX(100%) translateY(-100%);
-    }
-
-    75% {
-        transform: translateX(0%) translateY(-100%);
-    }
-
-    100% {
-        transform: translateX(0%) translateY(0%);
-    }
 }
