--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -13,8 +13,8 @@ body {
     border: 10px solid #6c38cc;
     display: flex;
     height: 550px;
-    flex-direction: column;
-    flex-wrap: wrap-reverse;
+    flex-direction: row;
+    flex-wrap: wrap;
 }
 
 .item {
@@ -23,4 +23,16 @@ body {
     text-align: center;
     width: calc(100% / 3);
     padding: 10px;
+}
+
+.item9 {
+    order: -1;
+}
+
+.item7 {
+    order: 1;
+}
+
+.item4 {
+    order: 2;
 }
