--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -13,8 +13,9 @@ body {
     border: 10px solid #6c38cc;
     display: flex;
     height: 550px;
-    flex-direction: row;
-    flex-wrap: wrap;
+    /* flex-direction: row; */
+    /* flex-wrap: wrap; */
+    flex-flow: row wrap;
 }
 
 .item {
@@ -23,16 +24,4 @@ body {
     text-align: center;
     width: calc(100% / 3);
     padding: 10px;
-}
-
-.item9 {
-    order: -1;
-}
-
-.item7 {
-    order: 1;
-}
-
-.item4 {
-    order: 2;
 }
