--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -11,17 +11,15 @@ body {
 
 .container {
     border: 10px solid #6c38cc;
+    height: 200vh;
     display: flex;
-    height: 550px;
-    /* flex-direction: row; */
-    /* flex-wrap: wrap; */
-    flex-flow: row wrap;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .item {
     background: #232228;
     border: 1px solid #6c38cc;
     text-align: center;
-    width: calc(100% / 3);
     padding: 10px;
 }
