--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -11,10 +11,10 @@ body {
 
 .container {
     border: 10px solid #6c38cc;
-    height: 200vh;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    height: 100vh;
+    justify-content: center;
+    align-items: baseline;
 }
 
 .item {
@@ -22,4 +22,12 @@ body {
     border: 1px solid #6c38cc;
     text-align: center;
     padding: 10px;
+}
+
+.item4 {
+    font-size: 40px;
+}
+
+.item8 {
+    font-size: 120px;
 }
