--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -1,7 +1,3 @@
-* {
-    box-sizing: border-box;
-}
-
 body {
     background: #1c1b21;
     color: #FAFAFA;
@@ -19,12 +15,15 @@ body {
     border: 1px solid #6c38cc;
     text-align: center;
     padding: 10px;
+    flex-basis: 300px;
 }
 
-.item {
-    flex: 1;
+.item1 {
+    flex-grow: 1;
+    flex-shrink: 1;
 }
 
-.item3 {
-    flex: 2;
+.item2 {
+    flex-grow: 10;
+    flex-shrink: 10;
 }
