--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background: #1c1b21;
     color: #FAFAFA;
@@ -9,8 +13,7 @@ body {
     border: 10px solid #6c38cc;
     display: flex;
     flex-wrap: wrap;
-    flex-direction: column;
-    height: 100vh;
+    gap: 20px;
 }
 
 .item {
@@ -18,10 +21,5 @@ body {
     border: 1px solid #6c38cc;
     text-align: center;
     padding: 10px;
-    flex-basis: 300px;
-    flex-grow: 1;
-}
-
-.item4 {
-    flex-grow: 1500;
+    flex: 0 1 calc(100% / 3 - 20px * 2 / 3);
 }
