--- a/Flexbox/index.css
+++ b/Flexbox/index.css
@@ -13,7 +13,8 @@ body {
     border: 10px solid #6c38cc;
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    flex-direction: column;
+    height: 200vh;
 }
 
 .item {
@@ -21,5 +22,8 @@ body {
     border: 1px solid #6c38cc;
     text-align: center;
     padding: 10px;
-    flex: 0 1 calc(100% / 3 - 20px * 2 / 3);
+}
+
+.item0 {
+    margin-top: auto;
 }
