--- a/Miro/Styles/style.css
+++ b/Miro/Styles/style.css
@@ -1,4 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+
+@font-face {
+    font-family: "Roboto";
+    src: url("/Miro/fonts/Roboto-Regular.ttf");
+}
+
 body {
+    font-family: "Roboto", sans-serif;
     margin: 0;
 }
 
