--- a/PurpleSchool/Styles/global.css
+++ b/PurpleSchool/Styles/global.css
@@ -1,3 +1,8 @@
+:root {
+    --color-primary: #6C38CC;
+    --space-10:
+}
+
 body {
     background: #16171D;
 }
@@ -16,10 +21,12 @@ body {
     border-radius: 10px;
     background: none;
     border: none;
+    margin-bottom: var(--space-10);
 }
 
 .button_primary {
-    background: #6C38CC;
+    background: var(--color-primary, red);
+    /* background: #6C38CC; */
     color: #FAFAFA;
 }
 
