--- a/PurpleSchool/Styles/global.css
+++ b/PurpleSchool/Styles/global.css
@@ -1,5 +1,6 @@
 :root {
     --color-primary: #6C38CC;
+    --color-primary-hover: #5B2BB2;
     --color-text: #FAFAFA;
     --color-link-hover: #AFB2BF;
     --color-bg: #16171D;
@@ -7,7 +8,11 @@
     --color-bg-light: #2E2D3D;
     --color-stroke: #4D5064;
 
+    --gradient: linear-gradient(93.33deg, #D77BE6 9.26%, #BE63E6 42.32%, #6C38CC 104.58%);
+
+    --border-10: 10px;
     --border-8: 8px;
+    --layout-width: 1172px;
 }
 
 html {}
