--- a/PurpleSchool/Styles/header.css
+++ b/PurpleSchool/Styles/header.css
@@ -44,10 +44,17 @@
     }
 }
 
+@media (max-width: 640px) {
+    .header__wrapper {
+        padding: 30px 24px;
+    }
+}
+
 @media (max-width: 480px) {
     .header__logo {
         max-width: 174px;
     }
+
 }
 
 /* Menu */
