--- a/PurpleSchool/Styles/page.css
+++ b/PurpleSchool/Styles/page.css
@@ -25,7 +25,7 @@
     background: var(--gradient);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
-
+    background-clip: text;
 }
 
 .hero__cta {
