--- a/PurpleSchool/Styles/footer.css
+++ b/PurpleSchool/Styles/footer.css
@@ -13,6 +13,7 @@
     justify-content: space-between;
     align-items: center;
     margin-bottom: 36px;
+    gap: 24px;
 }
 
 .footer__menu {
@@ -55,4 +56,19 @@
     font-size: 16px;
     line-height: 150%;
     color: var(--color-link-hover);
+}
+
+@media (max-width: 860px) {
+    .footer__menu {
+        flex-direction: column;
+        gap: 24px;
+        margin-bottom: 24px;
+    }
+}
+
+@media (max-width: 640px) {
+    .footer__social {
+        flex-direction: column;
+        align-items: start;
+    }
 }
