--- a/PurpleSchool/Styles/page.css
+++ b/PurpleSchool/Styles/page.css
@@ -33,6 +33,10 @@
     gap: 32px;
 }
 
+.button-more {
+    text-align: center;
+}
+
 @media (max-width: 1200px) {
     .hero {
         flex-direction: column;
