--- a/Grid/styles/styles.css
+++ b/Grid/styles/styles.css
@@ -47,7 +47,7 @@ body {
 .wrapper {
     display: grid;
     grid-template-columns: 200px 100px;
-    grid-template-rows: 100px 100px;
-    grid-auto-rows: 50px 200px;
+    grid-template-rows: 200px 100px;
+    grid-auto-flow: column;
     gap: 15px;
 }
