--- a/Grid/styles/styles.css
+++ b/Grid/styles/styles.css
@@ -46,8 +46,10 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 1fr) auto;
-    height: 600px;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(6, 1fr);
     gap: 15px;
+}
+
+.item_11 {
+    grid-column: span 8;
 }
