--- a/Grid/styles/styles.css
+++ b/Grid/styles/styles.css
@@ -46,6 +46,6 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fill, 300px);
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     gap: 15px;
 }
