--- a/Grid/styles/styles.css
+++ b/Grid/styles/styles.css
@@ -47,14 +47,15 @@ body {
 .wrapper {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+    /* grid-template-columns: repeat(3, 100px); */
+    grid-template-rows: repeat(10, 100px);
     gap: 15px;
+    justify-items: center;
+    /* align-items: end; */
+    justify-content: start;
 }
 
-.item_1 {
-    order: 1;
-    grid-column: 1 / -1;
-}
-
-.item_2 {
-    order: 3;
+.item_9 {
+    justify-self: end;
+    align-self: start;
 }
