--- a/Grid/styles/styles.css
+++ b/Grid/styles/styles.css
@@ -46,16 +46,19 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-    /* grid-template-columns: repeat(3, 100px); */
-    grid-template-rows: repeat(10, 100px);
+    grid-template-columns: repeat(3, 100px);
+    grid-auto-flow: row;
     gap: 15px;
-    justify-items: center;
-    /* align-items: end; */
-    justify-content: start;
 }
 
-.item_9 {
-    justify-self: end;
-    align-self: start;
+.item_3 {
+    grid-column: 1 / -1;
+}
+
+.item_4 {
+    grid-column: span 2;
+}
+
+.item_5 {
+    grid-column: span 2;
 }
