--- a/Grid/styles/styles.css
+++ b/Grid/styles/styles.css
@@ -46,19 +46,47 @@ body {
 
 .wrapper {
     display: grid;
-    grid-template-columns: repeat(3, 100px);
-    grid-auto-flow: row;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-areas:
+        "header header header header"
+        "sidebar content content content"
+        "footer footer footer footer";
     gap: 15px;
 }
 
-.item_3 {
-    grid-column: 1 / -1;
+.header {
+    grid-area: header;
 }
 
-.item_4 {
-    grid-column: span 2;
+.sidebar {
+    grid-area: sidebar;
 }
 
-.item_5 {
-    grid-column: span 2;
+.content {
+    grid-area: content;
+}
+
+.footer {
+    grid-area: footer;
+}
+
+@media (max-width: 900px) {
+    .wrapper {
+        grid-template-areas:
+            "header header header header"
+            "content content sidebar sidebar"
+            "footer footer footer footer";
+    }
+}
+
+@media (max-width: 500px) {
+    .wrapper {
+        grid-template-columns: 1fr;
+        grid-template-areas:
+            "header"
+            "sidebar"
+            "content"
+            "footer";
+    }
 }
