--- a/PurpleSchool/Styles/page.css
+++ b/PurpleSchool/Styles/page.css
@@ -41,6 +41,8 @@
     display: flex;
     gap: 24px;
     margin-bottom: 32px;
+    overflow: scroll;
+    margin-right: -24px;
 }
 
 .courses_wrapper {
