--- a/PurpleSchool/Styles/components.css
+++ b/PurpleSchool/Styles/components.css
@@ -112,7 +112,19 @@
     justify-content: space-between;
 }
 
-.card__32 {
+.card_light {
+    background: var(--color-bg-light);
+}
+
+.card_48x24 {
+    padding: 48px 24px;
+}
+
+.card_24x32 {
+    padding: 24px 32px;
+}
+
+.card_32 {
     padding: 32px;
 }
 
