--- a/PurpleSchool/Styles/page.css
+++ b/PurpleSchool/Styles/page.css
@@ -60,7 +60,7 @@
 
 .trust-wrapper {
     display: grid;
-    grid-template-columns: [start] 1fr 1fr [second] 1fr [end];
+    grid-template-columns: [start] repeat(3, 1fr) [end];
     gap: 0 75px;
 }
 
@@ -73,6 +73,7 @@
     flex-direction: column;
     gap: 16px;
     align-items: center;
+    margin-bottom: 70px;
 }
 
 .trust-wrapper__num {
@@ -92,6 +93,32 @@
     color: var(--color-text);
 }
 
+.trust-wrapper__h3 {
+    grid-column: start / end;
+    color: var(--color-text);
+    font-weight: 400;
+    font-size: 36px;
+    line-height: 120%;
+}
+
+.trust-wrapper__rating {
+    display: flex;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: 70px;
+}
+
+.trust-wrapper__rate {
+    font-weight: 400;
+    font-size: 54px;
+    line-height: 120%;
+    color: var(--color-text);
+}
+
+#trust-wrapper__just {
+    justify-content: start;
+}
+
 @media (max-width: 1200px) {
     .hero {
         flex-direction: column;
@@ -103,6 +130,10 @@
 
     .hero__cta {
         justify-content: center;
+    }
+
+    .trust-wrapper {
+        grid-template-columns: [start] repeat(2, 1fr) [end];
     }
 }
 
@@ -118,6 +149,10 @@
 
     .hero__right {
         width: 100%;
+    }
+
+    .trust-wrapper {
+        grid-template-columns: [start] 1fr [end];
     }
 }
 
